# scribe_c_glib

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in  scribe_c_glib.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: simple.c
src/: bucket_store_mapping.c  bucket_store_mapping.h  bucketupdater_types.c  bucketupdater_types.h  facebook_service.c  facebook_service.h  fb303_types.c  fb303_types.h  scribe.c  scribe.h  scribe_types.c  scribe_types.h
